2008-11-16  Andreas K. Foerster  <info@akfoerster.de>

	* avtfilechooser.c (ask_drive):
	new function (Windows only)

2008-11-12  Andreas K. Foerster  <info@akfoerster.de>

	* avatar.c (avt_draw_balloon, avt_draw_balloon2):
	improved using SDL_BlitSurface

	* avatar.c (putpixel): removed - no longer needed

2008-11-08  Andreas K. Foerster  <info@akfoerster.de>

	* avatar.c (SHADOWOFFSET):
	new macro

	* avatar.c (avt_draw_balloon, avt_draw_balloon2):
	better approach to draw a shadow

2008-11-07  Andreas K. Foerster  <info@akfoerster.de>

	* avatar.c (avt_credits):
	fix: print one last empty line to avoid streaks

	* avatar.c (avt_draw_balloon):
	balloon drops a shadow

2008-11-05  Andreas K. Foerster  <info@akfoerster.de>

	* avatar.c (avt_credits, avt_credits_up):
	optimization: just one line in buffer

2008-11-03  Andreas K. Foerster  <info@akfoerster.de>

	* avtterm.c (write_term): new function
	fix warnings

	* avatarsay.c: check value for chdir
	fix warnings

	* arch.c: always check value for read
	fix warnings
	
	* arch.c (arch_get_data):
	improved handling of read

2008-10-26  Andreas K. Foerster  <info@akfoerster.de>

	* configure (AVTVERSIONNR): new macro 
	avtterm.c (avtterm_start):
	use number-only-value for env-var AKFAVTTERM

2008-10-24  Andreas K. Foerster  <info@akfoerster.de>

	* avatar.c (avt_draw_balloon):
	when there is no avatar, put balloon at the top
	
	* avatarsay.c (avatar_command):
	new command: empty

2008-10-22  Andreas K. Foerster  <info@akfoerster.de>

	* avatarsay.c (help, checkoptions):
	option -e reserved for different later use

2008-10-20  Andreas K. Foerster  <info@akfoerster.de>

	* avatarsay.c (process_script):
	fix handling of initialisation

	* avatar.c (avt_draw_balloon):
	fix: update whole screen

2008-10-13  Andreas K. Foerster  <info@akfoerster.de>

	* akfavatar.pas (BalloonSize, BalloonHeight, BalloonWidth):
	new functions

	* akfavatar.pas (AvatarImageFile, AvatarImageData, initializeAvatar):